sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: '=' expected but ';' found.
var echange==false
^AlgCombSort:5: error: '=' expected but ';' found.
while (ecart > 1 || echange == true) {
^